--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "album-art": "^2.0.2",
     "bootstrap": "^4.5.2",
     "musixmatch-node": "^1.0.2",
     "react": "^16.13.1",
