--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "album-art": "^2.0.2",
     "bootstrap": "^4.5.2",
+    "genius-lyrics-api": "^3.0.3",
     "musixmatch-node": "^1.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
